--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+apikey=${opswat-apikey-demo-scan-file}
+server.port=3131
+scan-url=https://api.metadefender.com/v4/hash/
+upload-url=https://api.metadefender.com/v4/file
